--- a/docu/src/components/HomepageFeatures/styles.module.css
+++ b/docu/src/components/HomepageFeatures/styles.module.css
@@ -9,3 +9,15 @@
   height: 200px;
   width: 200px;
 }
+
+.card {
+  border-radius: 12px;
+}
+
+.card__header h4 {
+  margin: 0.2rem 0 0.4rem;
+}
+
+.card__body ul {
+  padding-left: 1.2rem;
+}
