--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,26 +6,26 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #7f3fbf;
+  --ifm-color-primary-dark: #5a2d91;
+  --ifm-color-primary-darker: #3a1a63;
+  --ifm-color-primary-darkest: #260f43;
+  --ifm-color-primary-light: #b78fe0;
+  --ifm-color-primary-lighter: #c69cef;
+  --ifm-color-primary-lightest: #c69eef;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: #9b6ddf;
+  --ifm-color-primary-dark: #7f3fbf;
+  --ifm-color-primary-darker: #3a1a63;
+  --ifm-color-primary-darkest: #260f43;
+  --ifm-color-primary-light: #b78fe0;
+  --ifm-color-primary-lighter: #c69cef;
+  --ifm-color-primary-lightest: #c69eef;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
@@ -108,8 +108,8 @@
 }
 
 [data-theme='dark'] .callout.callout--tip {
-  background-color: #0c4228; /* Darker green */
-  border-color: #11a967;
+  background-color: #3a1a63; /* Darker green */
+  border-color: #7f3fbf;
   color: #e0e0e0;
 }
 
